# C-Lab

./: CMakeLists.txt
Mamman 11/: main.c  makefile
Mamman 11/q1/: input  letters  letters.c  makefile  output
Mamman 11/q2/: makefile  xy_bits  xy_bits.c
Mamman 11/q2/tests/: input1  input2  output1  output2
Mamman 12/: adjacency  adjacency.c  header.h  makefile
Mamman 12/tests/: input1  input2  output1  output2
Mamman 14/: assembler.c  assembler.h  code_translation.c  code_translation.h  data_structure.c  data_structure.h  errors.c  errors.h  first_pass.c  first_pass.h  funcs.c  funcs.h  globals.h  makefile  preproc.c  preproc.h  second_pass.c  second_pass.h  tables.c  tables.h  test.am  test.as  test.c  test2.as
Mamman 14/headers/: assembler.h  code_translation.h  data_structure.h  errors.h  first_pass.h  funcs.h  globals.h  macro_data_structure.h  preproc.h  second_pass.h  tables.h
Mamman 14/src/: assembler.c  code_translation.c  data_structure.c  errors.c  first_pass.c  funcs.c  macro_data_structure.c  preproc.c  second_pass.c  tables.c
Mamman 14/tests/: errors_test.am  errors_test.as  excpted outputs  ps.am  ps.as  valid_code1.am  valid_code1.as  valid_code1.ext  valid_code1.ob  valid_code2.am  valid_code2.as  valid_code2.ob  valid_code3.am  valid_code3.as  valid_code3.ent  valid_code3.ext  valid_code3.ob  valid_code4.am  valid_code4.as  valid_code4.ent  valid_code4.ext  valid_code4.ob
Mamman 22/: complex.c  complex.h  input.c  input.h  inputErrors  makefile  mycomp  mycomp.c
Mamman 22/tests/: input1  input2  input3  output1  output2  output3
Mamman 23/: makefile  timediff  timediff.c  timediff.h  timediff.txt  תשובות לשאלות.docx
Mamman 23/tests/: timediff.txt  timediff_output.txt
testing/: main.c  makefile
